--- a/Mystery.uproject
+++ b/Mystery.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{7FFC6876-46E4-6A3C-4A35-E6A840C72D26}",
 	"Category": "",
 	"Description": ""
 }
