--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Mystery
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/FirstPersonBP/Maps/Game.Game
 GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 TransitionMap=
 bUseSplitscreen=True
