-More work done on ghost movement

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,6 +104,11 @@ SupportedAgentsMask=(bSupportsAgent0=True,bSupportsAgent1=True,bSupportsAgent2=T
 DirtyAreasUpdateFreq=60.000000
 
 [/Script/NavigationSystem.RecastNavMesh]
-AgentMaxStepHeight=120.000000
-AgentMaxSlope=50.000000
+AgentMaxStepHeight=100.000000
+AgentMaxSlope=89.000000
+AgentRadius=15.000000
+MinRegionArea=0.000000
+CellHeight=5.000000
+AgentHeight=5.000000
+MaxSimplificationError=0.000000
 
