--- a/Mystery.uproject
+++ b/Mystery.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{7C0BDF4E-464A-0251-4C98-BBA252C0A021}",
 	"Category": "",
 	"Description": ""
 }
